게시판까지 작성 기능 통합 반영
커뮤니티 게시판/업무일지 포함 백엔드·프론트 변경사항을 통합하고 관련 API, 서비스, 퍼시스턴스, 마이그레이션, 화면 구성을 함께 정리해 다음 단계 개발 기준선을 맞춥니다.

Co-authored-by: Cursor <cursoragent@cursor.com>